@startuml

package de.jfachwert.pruefung.exception {

    class ValidationException
    class LocalizedValidationException
    class PruefzifferException
    class IllegalLengthException
    class InvalidValueException
    class NullValueException

}

LocalizedValidationException -up-|> ValidationException
LocalizedValidationException <|-- PruefzifferException
LocalizedValidationException <|-- IllegalLengthException
LocalizedValidationException <|-- InvalidValueException
LocalizedValidationException <|-- NullValueException

@enduml
